--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p>Y.H.</p>
   </div>
   <div class="header-right">
-            <a class="A" href="">Portfolio</a>
-            <a class="A" href="">Contact<a>
-          <a class="A" href="">TOP<a>
+            <a class="A" href="https://yuyahori.github.io/YH96/Portfolio">Portfolio</a>
+            <a class="A" href="https://yuyahori.github.io/YH96/Contact">Contact<a>
+          <a class="A" href="https://yuyahori.github.io/YH96/index">TOP<a>
   </div>
 </div>
 </header>
