--- a/Portfolio.html
+++ b/Portfolio.html
@@ -53,6 +53,10 @@
           </div>
           <div class="Photo">
   <a href="IMG_4245.JPG" data-lightbox="sample"><img src="IMG_4245.JPG" /></a>
+
+  <a href="NAGO.JPG" data-lightbox="sample"><img src="NAGO.JPG" /></a>
+
+  <a href="NAGOYA.JPG" data-lightbox="sample"><img src="NAGOYA.JPG" /></a>
           </div>
 
         </div>
