--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   </div>
   <div class="B">
     <div class="piece">
-      <a href="">Profile</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
+      <a href="https://yuyahori.github.io/YH96/index">Profile</a>
+      <a href="https://yuyahori.github.io/YH96/Portfolio">Portfolio</a>
+      <a href="https://yuyahori.github.io/YH96/Contact">Contact</a>
     </div>
   </div>
 </div>
