--- a/Contact.html
+++ b/Contact.html
@@ -15,9 +15,9 @@
             <p>Y.H.</p>
       </div>
       <div class="header-right">
-                <a class="A" href="https://yuyahori.github.io/YH96/Portfolio">Portfolio</a>
-                <a class="A" href="https://yuyahori.github.io/YH96/Contact">Contact<a>
-              <a class="A" href="https://yuyahori.github.io/YH96/index">TOP<a>
+                     <a class="A" href="https://yh19960918.github.io/YH96/Portfolio">Portfolio</a>
+            <a class="A" href="https://yh19960918.github.io/YH96/Contact">Contact<a>
+          <a class="A" href="https://yh19960918.github.io/YH96/index">TOP<a>
       </div>
     </div>
     </header>
